playground/infra-values/fake-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fake-api 
  template:
    metadata:
      labels:
        app: fake-api 
    spec:
      containers:
      - name: fake-api
        image: reachfive/fake-api-server:latest
        ports:
        - containerPort: 1090
        resources:
          requests:
            memory: "500Mi"
            cpu: "250m"  
          limits:
            memory: "1Gi"
            cpu: "750m"  
---
apiVersion: v1
kind: Service
metadata:
  name: fake-api
spec:
  selector:
    app: fake-api
  ports:
  - name: http-fake-api
    protocol: TCP
    port: 1090
  type: LoadBalancer
